# Cursor-Usage-Templates

./: .gitignore  README.md  pyproject.toml
.github/workflows/: hooks-release.yml  python-tests.yml  trivy.yml
templates/: MAINTAINER.md  README.md  USAGE.md  hook-policy.example.json  project.md  user.md  workspace.md
templates/agents/: AGENTS.md  AGENTS_USAGE.md  agent.architect.md  agent.backend-go.md  agent.backend-python.md  agent.database.md  agent.devops.md  agent.frontend.md  agent.performance.md  agent.pm.md  agent.reviewer.md  agent.security.md  agent.tester.md  agents.index.md
templates/ai-runtime/: README.md  validate_bot_runtime.py
templates/commands/: README.md  _command-common.ps1  cursor_activity.py  query-cursor-logs.ps1  route-agent.ps1  route-model.ps1  route-rules.ps1  route-session.ps1  route-skill.ps1  routing.py  sync-cursor.ps1  sync-cursor.py
templates/github/: CODEOWNERS  README.md
templates/hooks/: HOOKS_USAGE.md  README.md  hooks.global.unix.json  hooks.global.windows.json  hooks.json  hooks.unix.json
templates/mcp/: README.md
templates/prompts/: README.md  plan-ai-infrastructure.md  plan-cursor-activity-logging.md  plan-cursor-agents-routing.md  plan-cursor-hooks.md  plan-cursor-model-routing.md  plan-cursor-rules-audit.md  plan-cursor-session-map.md  plan-cursor-skills-routing.md  plan-llm-system-design-review.md  plan-python-remediation-foundation.md  plan-python-remediation-hook-policy.md  plan-python-remediation-overview.md  plan-python-remediation-sync-scripts.md  plan-reuse-before-implement.md
templates/rules/: RULES.md  (+29 more)
(+295 files in other folders)
