[project]
name = "cursor-usage-templates"
version = "0.1.0"
description = ""
authors = [
    {name = "Anna Chaykovsky", email = "achaykovsky.career@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.pytest.ini_options]
testpaths = [
    "templates/hooks/tests",
    "templates/commands/tests",
    "templates/skills/shared-practices/route-task-to-model/scripts/tests",
]
pythonpath = ["templates/hooks/policy", "templates/commands"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
